# kredo

./: .gitignore  PARKING_LOT.md  README.md  SCOPE.md  codex_suggestions.md  pyproject.toml
app/: index.html
app/css/: style.css
app/embed/: members.html
app/js/: api.js  app.js  crypto.js  storage.js  ui.js
app/js/views/: attest.js  browse.js  dashboard.js  discuss.js  governance.js  setup.js  taxonomy.js  verify.js
data/: taxonomy_v1.json
deploy/: kredo.service  nginx.conf  setup.sh
docs/: about-page-content.md  faq-content.md  human-friendly-roadmap.md  identity-recovery-implementation-spec.md  landing-page-content.md  protocol-page-content.md  reddit-post.md  skill.md
docs/velo-code/: http-functions.js  suggestions-page.js
langchain-kredo/: .gitignore  LICENSE  README.md  pyproject.toml
langchain-kredo/langchain_kredo/: __init__.py  _client.py  callback.py  simple.py  tools.py  trust_gate.py
langchain-kredo/tests/: conftest.py  test_callback.py  test_client.py  test_simple.py  test_tools.py  test_trust_gate.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/scripts/: sync-app.mjs
site/src/components/: Card.astro  CodeBlock.astro  Hero.astro  MembersWidget.astro
site/src/layouts/: Base.astro
site/src/pages/: about.astro  community.astro  developers.astro  faq.astro  index.astro  protocol.astro
site/src/styles/: global.css
src/kredo/: __init__.py  _canonical.py  accountability.py  cli.py  client.py  evidence.py  exceptions.py  identity.py  ipfs.py  models.py  signing.py  store.py  taxonomy.py  trust_analysis.py
src/kredo/api/: __init__.py  app.py  deps.py  rate_limit.py  signatures.py  trust_cache.py
src/kredo/api/routers/: __init__.py  attestations.py  discussion.py  integrity.py  ownership.py  profiles.py  registration.py  revocations.py  risk.py  search.py  taxonomy.py  trust_analysis.py
src/kredo/data/: __init__.py  taxonomy_v1.json
tests/: conftest.py  test_api.py  test_cli.py  test_custom_taxonomy.py  test_discussion.py  test_evidence.py  test_identity.py  test_ipfs.py  test_models.py  test_signing.py  test_store.py  test_trust_analysis.py
